2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* applet.c: Don't leak style while handling the change_background
	signal.  Fix adapted from Vincent Untz's fixes to various panel
	applets.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* preferences.c: (gnome_volume_applet_preferences_init): Use
	gtk_widget_size_request() instead of the deprecated
	gtk_widget_set_usize().

2005-02-09  Mark McLoughlin  <mark@skynet.ie>

	Fixes crash when we select a track with no channels.
	See Fedora bug:
	  https://bugzilla.redhat.com/beta/show_bug.cgi?id=147282
	Thanks to Neil Paris <neilparis@gmail.com> for isolating
	the problem.

	* applet.[ch]:
	(select_track), (select_element_and_track): new functions.
	(gnome_volume_applet_setup): re-work mixer/track selection so
	that we never end up with a track with no channels.
	
	* load.c: (gnome_volume_applet_factory): don't pop up an
	error dialog if we can't find a mixer here. Allow
	gnome_volume_applet_setup() to do it instead.

2005-01-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_init),
	(gnome_volume_applet_setup), (gnome_volume_applet_refresh),
	(cb_gconf), (cb_verb):
	* keys.h:
	* preferences.c: (gnome_volume_applet_preferences_init),
	(gnome_volume_applet_preferences_new),
	(gnome_volume_applet_preferences_dispose), (cb_dev_selected),
	(cb_track_select):
	* preferences.h:
	  Use panel_applet_gconf instead of gconf directly. Fixes #163743.

2005-01-18  Carlos Garnacho Parro  <carlosg@gnome.org>

	* applet.[ch]: handled panel size and icon theme changes, as well
	as a little muting/unmuting error (not updating correctly the icon). 
	Fixes #164492

2005-01-16  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am:
	* volume-*.png (removed): No longer install pixmaps.

	* applet.c: Use icon theme instead.

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_refresh):
	  Make sugar-daddy happy. Evil hack. Don't look. Fixes #153553.
