@@ -1,3 +1,8 @@
+2005-03-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* applet.c: (gnome_volume_applet_button):
+	  Ignore clicks from outside widget. Fixes #168726.
+
 2005-02-27  Ryan Lortie  <desrt@desrt.ca>
 
 	* applet.c: Don't leak style while handling the change_background
